message-email-update

--- a/gallery.html
+++ b/gallery.html
@@ -241,7 +241,7 @@
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="mailto:ligongyu1@126.com?subject=limslab-contact&body=xxxtest" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+												<a href="mailto:ligongyu1@126.com?subject=limslab-contact" class="form-button-submit button icon solid fa-envelope">Send Message</a>
 											</div>
 										</div>
 									</form>
@@ -263,7 +263,7 @@
 													(000) 000-0000
 												</li>
 												<li class="icon solid fa-envelope">
-													<a href="#">ligongyu1@126.com</a>
+													<a href="mailto:ligongyu1@126.com?subject=limslab-contact">ligongyu1@126.com</a>
 												</li>
 											</ul>
 										</div>
