--- a/people.html
+++ b/people.html
@@ -47,19 +47,20 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong>Tech Show</strong> @ <strong>LimsLab</strong>!</h2>
+							<h2>Welcome to <strong>Team Show</strong> @ <strong>LimsLab</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<a href="research.html" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
 										<header>
-											<h3>Native IM-MS+</h3>
+											<h3>PI: Gongyu Li</h3>
 										</header>
-										<p>As a key structural mass spectrometric tool, <strong>Native IM-MS</strong> is greatly comprementary to probing proein structure
-										with unprecedented analytical speed and great economics in sample consumption.</p>
+										<p>AP: 2021.02 - now, Nankai University </p>
+										<p>Postdoc: 2017.08 - 2021.01, UW-Madison </p> 
+										<p>PhD: 2012.09 - 2017.06, USTC </p>
 									</section>
 
 							</div>
@@ -67,7 +68,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3>In-cell MS+</h3>
 										</header>
