--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
-									<li>
-										<a href="#" class="icon fa-chart-bar"><span>People</span></a>
+									<li><a class="icon fa-chart-bar" href="people.html" ><span>People</span></a>
 										<ul>
-											<li><a href="#">PI</a></li>
-											<li><a href="#">Current Members</a></li>
-											<li><a href="#">Alumni</a></li>
-											<li><a href="#">Collaborators</a></li>
+											<li><a href="people.html">PI</a></li>
+											<li><a href="people.html">Current Members</a></li>
+											<li><a href="people.html">Alumni</a></li>
+											<li><a href="people.html">Collaborators</a></li>
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
