--- a/people.html
+++ b/people.html
@@ -24,8 +24,7 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
-									<li>
-										<a href="people.html" class="icon fa-chart-bar"><span>People</span></a>
+									<li><a class="icon fa-chart-bar" href="people.html" ><span>People</span></a>
 										<ul>
 											<li><a href="people.html">PI</a></li>
 											<li><a href="people.html">Current Members</a></li>
