--- a/people.html
+++ b/people.html
@@ -55,7 +55,7 @@
 									<section>
 										<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
 										<header>
-											<h3>PI: Gongyu Li</h3>
+											<h3>PI: Dr. Gongyu Li</h3>
 										</header>
 										<p><strong>AP</strong>: 2021.02 - now, Nankai University; 
 										<strong>Postdoc</strong>: 2017.08 - 2021.01, UW-Madison;
@@ -67,7 +67,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS1: xxx</h3>
 										</header>
@@ -95,7 +95,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS3: xxx</h3>
 										</header>
