--- a/people.html
+++ b/people.html
@@ -81,7 +81,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS2: xxx</h3>
 										</header>
@@ -109,7 +109,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS4: xxx</h3>
 										</header>
@@ -123,7 +123,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS5: xxx</h3>
 										</header>
@@ -176,7 +176,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS2: xxx</h3>
 										</header>
@@ -204,7 +204,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS4: xxx</h3>
 										</header>
@@ -218,7 +218,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
 											<h3>LIMS5: xxx</h3>
 										</header>
