--- a/publication.html
+++ b/publication.html
@@ -55,7 +55,7 @@
 									<h3><strong>At Nankai University:</strong></h3>
 									<h3><strong>2021</strong></h3>
 									<p>Gongyu Li et al. 2021 in press</p>
-									<span class="image featured"><img src="images/nankai-logo.jpg" alt="" /></span>
+									<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 									<p>Gongyu Li et al. 2021 in press</p>
 									<span class="image featured"><img src="images/nankai-logo.jpg" alt="" /></span>
 									<h3><strong>Prior to Nankai University:</strong></h3>
