--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@
 									<header>
 										<h2><strong>Rapid! Lossless! High-resolution! ++ </strong> </h2>
 									</header>
-									<span class="image featured"><img src="images/nklims_logo_project_20200502.jpg" alt="" /></span>
+									<a class="image featured"><img src="images/nklims_logo_project_20200502.jpg" alt="" /></a>
 									<h3>Rapid: In-cell MS</h3>
 									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
 									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
