--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
 								<article class="box post">
 									<header>
 										<h2><strong>"More Native" Structural Mass Spectrometry:</strong> </h2>
-										<h2><strong>Rapid!   Lossless!   High-resolution! +++ </strong> </h2>
+										<h2><strong>Rapid!!! Lossless!!! High-resolution!!! +++ </strong> </h2>
 									</header>
 									<a class="image featured"><img src="images/nklims_logo_project_20200502.jpg" alt="" /></a>
 									<h3>Rapid: In-cell MS</h3>
