--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
 										<header>
-											<h3>Tagerted Proteomics+</h3>
+											<h3>Targeted Proteomics+</h3>
 										</header>
 										<p><strong>Targeted Proteomics</strong> is a most traditional and best established, large-scale MS strategy to analyze proteome with 
 										most attainable throughput so far. </p>
@@ -90,7 +90,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="research.html" class="button icon solid fa-file">Tell Me More</a></li>
+									<li><a href="research.html" class="button icon solid fa-file"> More About Native SMS </a></li>
 								</ul>
 							</div>
 						</div>
@@ -100,8 +100,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
+						<p>Get to know our PI: <br />
+						<strong>Dr. Gongyu Li</strong> </p>
 					</div>
 				</section>
 
