--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
 										<h2><strong>"More Native" Structural Mass Spectrometry:</strong> </h2>
 										<h2><strong>Rapid + Lossless + High-resolution +++ </strong> </h2>
 									</header>
-									<a class="image featured"><img src="images/limslab_logo_full.jpg" alt="" /></a>
+									<a class="image featured"><img src="images/limslab_logo_full.jpg" width="50%" height="50%" alt="" /></a>
 									<h3>Rapid: In-cell MS</h3>
 									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
 									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
