--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="research.html" class="button icon solid fa-file"> More About Native SMS </a></li>
+									<li><a href="research.html" class="button icon solid fa-file"> "More" Native SMS </a></li>
 								</ul>
 							</div>
 						</div>
@@ -114,12 +114,8 @@
 								<div id="content" class="col-8 col-12-medium">
 
 									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
-											</header>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<article class="box post">											
+											<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
 											<h3>I mean isn't it possible?</h3>
 											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
 											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
