--- a/index.html
+++ b/index.html
@@ -176,11 +176,13 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<span class="date">Academic Preparation</span>																
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Dr. Gongyu Li obtained his Ph.D. degree in Analytical Chemistry under the supervision of Dr. 
+															Guangming Huang at University of Science and Technology of China (USTC) in June 2017. His research career
+															started at Jiangxi Normal University (JXNU), where he received his B.S. in Chemistry in 2012.
+															In 2016 and 2019, he visited Dr. Brandon T. Ruotolo’s lab at University of Michigan as a visiting graduate
+															student and visiting scholar, respectively, where he started and extended his ion mobility spectrometry research.</p>
 														</article>
 
 												</li>
